Update account on jenkinsfile
